--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
          </div>
          <br>
          <div class="middle">
-            <h2 style="color:rgb(93, 150, 237); font-family: 'BioRhyme';"  id="hostname">Solar System Pod Namess</h2>
+            <h2 style="color:rgb(93, 150, 237); font-family: 'BioRhyme';"  id="hostname">Solar System Pod Names</h2>
 
             <!-- <h3 style="color:rgb(111, 255, 171); font-family: 'Encode Sans';" id="environment">ENVIRONMENT: " placeholder "</h3> -->
          </div>
